
 Released on 
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - RecurrentManagement: improve detail column sort (todo #1146).
   - RecurrentManagement: generate operations on selected models (todo #1140).
   - UserPreferences: have a preference to edit date in overwrite mode (todo #707).
   - VAT: put its own icon on operation templates pages (todo #1138).
 
 Bug fixes:

   - Dossier: fix minimal effect date computing (todo #1144).
   - EntryPage: fix new entry insertion (todo #1133).
   - ReconciliationPage: fix debit vs. credit comparison (todo #1132).
   - RecurrentOperations: fix amount update on newly generated record (todo #1135).
   - RecurrentOperations: review index to allow many cancelled operations (todo #1137).
   - VATDeclaration: computes with actual rounded numbers (todo #1134).
   - VATDeclaration: improve treeview display (todo #1145).
   - VATDeclaration: make treeview columns sortable (todo #1143).

 Other changes:

   - my_date_editable_set_overwrite(): new function.
   - my_double_round_to_decimals(): new function.
   - RecurrentModelManagement: change columns header (todo #1141).
   - RecurrentOperations: set the icon slightly smaller (todo #1138).
   - ofa_prefs_date_overwrite(): new function.
   - ofa_recurrent_manage_page_get_selected(): new method.
   - ofa-recurrent-manage-page.ui: removed (unused) file.

-----------------------------------------------------------------------
 Version 0.57
 ============

 Released on 2016-05-17
  
 New features and improvements:

   - Recurrent DB Model v 2.
   - Account: only detail account may be closed (todo #1129).
   - BatUtils: display an error message if appropriate.
   - Entry: associate an operation number when appropriate (todo #1123).
   - GuidedInputBin: row number is italic (todo #1109).
   - GuidedInputBin: review account column width (todo #1108).
   - GuidedInputBin: review account tooltip and message area (todo #1114).